--- a/microservices/values.yaml
+++ b/microservices/values.yaml
@@ -1,7 +1,7 @@
 # -- global variables
 global:
   namespace: "default"
-#  replicaCount: 5 
+  replicaCount: 5 
   nameOverride: ""
   fullnameOverride: ""
   imagePullSecrets:
